--- a/client/src/components/dashboard.css
+++ b/client/src/components/dashboard.css
@@ -1,4 +1,4 @@
-.middle{
+/* .middle{
     background-color: whitesmoke;
 }
 
@@ -16,7 +16,7 @@
 /* .dashdisplay{ */
     /* overflow: scroll; */
 /* } */
-
+/* 
  .dashdisplay{
     height:100vh;
     overflow:scroll;
@@ -26,4 +26,4 @@
 .graph_card{
     margin-bottom:100px;
 }
-
+ */
