--- a/client/src/components/home.css
+++ b/client/src/components/home.css
@@ -1,5 +1,5 @@
-*{
-    /* background-color: #acdcdc; */
+/* *{
+    background-color: #acdcdc;
     overflow: hidden;
     text-align: center;
 }
@@ -32,4 +32,4 @@
   justify-content: center;
 }
 /* @media only screen and (max-width: 600px) */
-
+ 
