--- a/client/src/components/login.css
+++ b/client/src/components/login.css
@@ -1,4 +1,4 @@
-.login_in{
+/* .login_in{
     width: 550px;
     height: 390px;
     background-color: white;
@@ -9,4 +9,4 @@
 .login_page{
     height: 100vh;
     background-color: #172154;
-}
+} */
