--- a/client/src/components/userdashboard.css
+++ b/client/src/components/userdashboard.css
@@ -1,4 +1,4 @@
-.middle{
+/* .middle{
     background-color: whitesmoke;
 }
 
@@ -11,18 +11,18 @@
 }
 .gra{
     margin-left: 5px;
-}
+} */
 
 /* .dashdisplay{ */
     /* overflow: scroll; */
 /* } */
 
- .dashdisplay{
+ /* .dashdisplay{
     height:100vh;
     overflow:scroll;
     overflow-x:hidden;
 } 
 .graph_card{
     margin-bottom:100px;
-}
+} */
 
