--- a/client/src/components/work.css
+++ b/client/src/components/work.css
@@ -39,7 +39,7 @@ form {
       padding: 10px 12px;
     }
   } */
-
+/* 
   form {
     display: flex;
     flex-direction: column;
@@ -89,4 +89,4 @@ form {
       width: 100%;
       margin-bottom: 10px;
     }
-  }
+  } */
