--- a/client/src/components/worklist.css
+++ b/client/src/components/worklist.css
@@ -1,4 +1,4 @@
-.container {
+/* .container {
     max-width: 800px;
     margin: 0 auto;
   }
@@ -54,7 +54,7 @@
       width: 100%;
       margin-bottom: 16px;
     }
-  }
+  } */
   /* .div1{
     background: linear-gradient(to top, #669999 0%, #ffffcc 100%);
     background-repeat: no-repeat;
