--- a/client/src/components/RegistrationForm.css
+++ b/client/src/components/RegistrationForm.css
@@ -1,4 +1,4 @@
-.registration-form-wrapper {
+/* .registration-form-wrapper {
     position: relative;
     height: 100vh;
     display: flex;
@@ -11,7 +11,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 100%; */
     /* background-color: #007bff; */
-    opacity: 0.8;
-  }
+    /* opacity: 0.8;
+  } */
