--- a/client/src/components/userRegistrationForm.css
+++ b/client/src/components/userRegistrationForm.css
@@ -1,17 +1,17 @@
-.registration-form-wrapper {
+/* .registration-form-wrapper {
     position: relative;
     height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
   }
-  
-  .overlay {
+   */
+  /* .overlay {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 100%; */
     /* background-color: #007bff; */
-    opacity: 0.8;
-  }
+    /* opacity: 0.8;
+  } */
