--- a/client/src/components/workform.css
+++ b/client/src/components/workform.css
@@ -1,4 +1,4 @@
-.form_work{
+/* .form_work{
     width: 1100px;
     height: 600px;
     border: 2px solid black;
@@ -7,4 +7,4 @@
 }
 .form_work input{
     border: 1px solid black;
-}
+} */
